# PopotoAPI

./: README.md
CPP/popoto_client/: CMakeLists.txt  Readme.md  build.sh  pFIFO.h
CPP/popoto_client/Example/: WavProcess.h  play_rec_test.cpp  play_record_utils.cpp  play_record_utils.h  playpcm.cpp  recordpcm.cpp
CPP/popoto_client/include/: TCPClient.hpp  TCPCmdClient.hpp  TCPPcmPlayClient.hpp  TCPPcmRecordClient.hpp  pFIFO.h  popoto_client.hpp
CPP/popoto_client/src/: TCPClient.cpp  popoto_client.cpp
Matlab/: popoto.m  popoto.m.orig
python/: ParamsList.txt  popoto.py
python3/: ParamsList.txt  default_shell.py  pshell
python3/examples/: data_socket.py
python3/popoto/: popoto.py
